compiler-core/src/go/tests/snapshots/gleam_core__go__tests__case__case_bool_literals.snap
---
source: compiler-core/src/go/tests/case.rs
assertion_line: 50
expression: "\npub fn go(x: Bool) -> Int {\n  case x {\n    True -> 1\n    False -> 0\n  }\n}\n"
---
----- SOURCE CODE

pub fn go(x: Bool) -> Int {
  case x {
    True -> 1
    False -> 0
  }
}


----- COMPILED GO
package thepackage

func Go(x bool) int64 {
  return (func() int64 {
    _case_subject := x
    _ = _case_subject
    if _case_subject == true {
      return int64(1)
    }
    if _case_subject == false {
      return int64(0)
    }
    panic("non-exhaustive case")
  }())
}
