compiler-core/src/go/tests/snapshots/gleam_core__go__tests__case__case_each_clause_has_independent_binding.snap
---
source: compiler-core/src/go/tests/case.rs
assertion_line: 162
expression: "\npub fn go(x: Int) -> Int {\n  case x {\n    0 -> 0\n    n -> n\n  }\n}\n"
---
----- SOURCE CODE

pub fn go(x: Int) -> Int {
  case x {
    0 -> 0
    n -> n
  }
}


----- COMPILED GO
package thepackage

func Go(x int64) int64 {
  return (func() int64 {
    _case_subject := x
    _ = _case_subject
    if _case_subject == int64(0) {
      return int64(0)
    }
    n := _case_subject
    _ = n
    return n
  }())
}
