compiler-core/src/go/tests/snapshots/gleam_core__go__tests__case__case_float_literals.snap
---
source: compiler-core/src/go/tests/case.rs
assertion_line: 20
expression: "\npub fn go(x: Float) -> Int {\n  case x {\n    0.0 -> 1\n    1.5 -> 2\n    _ -> 3\n  }\n}\n"
---
----- SOURCE CODE

pub fn go(x: Float) -> Int {
  case x {
    0.0 -> 1
    1.5 -> 2
    _ -> 3
  }
}


----- COMPILED GO
package thepackage

func Go(x float64) int64 {
  return (func() int64 {
    _case_subject := x
    _ = _case_subject
    if _case_subject == float64(0.0) {
      return int64(1)
    }
    if _case_subject == float64(1.5) {
      return int64(2)
    }
    return int64(3)
  }())
}
