compiler-core/src/go/tests/snapshots/gleam_core__go__tests__case__case_guard_compound_bool.snap
---
source: compiler-core/src/go/tests/case.rs
assertion_line: 292
expression: "\npub fn go(x: Int) -> Int {\n  case x {\n    n if n > 0 && n < 10 -> n\n    _ -> -1\n  }\n}\n"
---
----- SOURCE CODE

pub fn go(x: Int) -> Int {
  case x {
    n if n > 0 && n < 10 -> n
    _ -> -1
  }
}


----- COMPILED GO
package thepackage

func Go(x int64) int64 {
  return (func() int64 {
    _case_subject := x
    _ = _case_subject
    n := _case_subject
    _ = n
    if ((n > int64(0)) && (n < int64(10))) {
      return n
    }
    return int64(-1)
  }())
}
