compiler-core/src/go/tests/snapshots/gleam_core__go__tests__case__case_guard_on_literal_pattern.snap
---
source: compiler-core/src/go/tests/case.rs
assertion_line: 348
expression: "\npub fn go(x: Int, y: Int) -> Int {\n  case x {\n    0 if y > 0 -> 1\n    0 -> 2\n    _ -> 3\n  }\n}\n"
---
----- SOURCE CODE

pub fn go(x: Int, y: Int) -> Int {
  case x {
    0 if y > 0 -> 1
    0 -> 2
    _ -> 3
  }
}


----- COMPILED GO
package thepackage

func Go(x int64, y int64) int64 {
  return (func() int64 {
    _case_subject := x
    _ = _case_subject
    if _case_subject == int64(0) {
      if (y > int64(0)) {
        return int64(1)
      }
    }
    if _case_subject == int64(0) {
      return int64(2)
    }
    return int64(3)
  }())
}
