compiler-core/src/go/tests/snapshots/gleam_core__go__tests__case__case_guard_references_outer_binding.snap
---
source: compiler-core/src/go/tests/case.rs
assertion_line: 334
expression: "\npub fn go(x: Int, threshold: Int) -> Int {\n  case x {\n    n if n > threshold -> 1\n    _ -> 0\n  }\n}\n"
---
----- SOURCE CODE

pub fn go(x: Int, threshold: Int) -> Int {
  case x {
    n if n > threshold -> 1
    _ -> 0
  }
}


----- COMPILED GO
package thepackage

func Go(x int64, threshold int64) int64 {
  return (func() int64 {
    _case_subject := x
    _ = _case_subject
    n := _case_subject
    _ = n
    if (n > threshold) {
      return int64(1)
    }
    return int64(0)
  }())
}
