compiler-core/src/go/tests/snapshots/gleam_core__go__tests__case__case_guard_simple.snap
---
source: compiler-core/src/go/tests/case.rs
assertion_line: 278
expression: "\npub fn go(x: Int) -> Int {\n  case x {\n    n if n > 0 -> n\n    _ -> 0\n  }\n}\n"
---
----- SOURCE CODE

pub fn go(x: Int) -> Int {
  case x {
    n if n > 0 -> n
    _ -> 0
  }
}


----- COMPILED GO
package thepackage

func Go(x int64) int64 {
  return (func() int64 {
    _case_subject := x
    _ = _case_subject
    n := _case_subject
    _ = n
    if (n > int64(0)) {
      return n
    }
    return int64(0)
  }())
}
