compiler-core/src/go/tests/snapshots/gleam_core__go__tests__case__case_guard_string_eq.snap
---
source: compiler-core/src/go/tests/case.rs
assertion_line: 377
expression: "\npub fn go(s: String) -> Int {\n  case s {\n    n if n == \"hi\" -> 1\n    _ -> 0\n  }\n}\n"
---
----- SOURCE CODE

pub fn go(s: String) -> Int {
  case s {
    n if n == "hi" -> 1
    _ -> 0
  }
}


----- COMPILED GO
package thepackage

func Go(s string) int64 {
  return (func() int64 {
    _case_subject := s
    _ = _case_subject
    n := _case_subject
    _ = n
    if (n == "hi") {
      return int64(1)
    }
    return int64(0)
  }())
}
