compiler-core/src/go/tests/snapshots/gleam_core__go__tests__case__case_guard_with_not.snap
---
source: compiler-core/src/go/tests/case.rs
assertion_line: 320
expression: "\npub fn go(x: Bool, y: Bool) -> Int {\n  case x {\n    a if !y -> 1\n    _ -> 0\n  }\n}\n"
---
----- SOURCE CODE

pub fn go(x: Bool, y: Bool) -> Int {
  case x {
    a if !y -> 1
    _ -> 0
  }
}


----- COMPILED GO
package thepackage

func Go(x bool, y bool) int64 {
  return (func() int64 {
    _case_subject := x
    _ = _case_subject
    a := _case_subject
    _ = a
    if !y {
      return int64(1)
    }
    return int64(0)
  }())
}
